<resources>
    <string name="app_name">E Smart Complain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>

    <string name="title_activity_splash_screen"><Spla></Spla>shScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="posts">Posts</string>
    <string name="_22">0</string>
    <string name="solved">Solved</string>
    <string name="unsolved">Unsolved</string>
    <string name="up_votes">Up votes</string>
    <string name="ethan_hunt">Ethan Hunt</string>
    <string name="name">Name</string>
    <string name="ethan_hunt_gmail_com">ethan_hunt@gmail.com</string>
    <string name="_97">97</string>
    <string name="total_issues_confronted">Total issues confronted</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?   Sign up</string>
    <string name="_9876543210">9876543210</string>
    <string name="_44">0</string>
    <string name="jon_doe">Jon Doe</string>
    <string name="txt_probs">The first attack was on our laboratory -- they questioned the data analysis, our capabilities, our equipment and then as it got nastier, they resorted to personalised attacks on us and our integrity. Their favourite ploy was to dismiss us as a pawn in a conspiracy hatched by Europe (because we get funds from multilateral and bilateral agencies) to destroy the good name of us companies. But this was not all. We heard rumours of phone calls from Colin Powell, then us secretary of state, to the prime minister\'s office. We heard of Washington DC-based high-priced lawyers (lobbyists) flying down to cajole the powers here. We heard of intense activity in corridors in which we have no place.</string>
    <string name="title">Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="good_news">Good News!</string>
    <string name="status">Status</string>
    <string name="resolved">Resolved</string>
    <string name="a_bigger_at_pit_ring_road">A bigger at pit Ring Road !</string>
    <string name="issue">Issue</string>
    <string name="profile">Profile</string>
    <string name="_0">0</string>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="done">Done !</string>
    <string name="email_id">Email-id</string>
    <string name="forgot_your_password">Forgot your Password ?</string>
    <string name="local_host_url">Local Host URL</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="connect">Connect</string>
    <string name="no_data">No Data !</string>
    <string name="logout">Logout</string>
    <string name="down_vote">down Vote</string>
    <string name="up_vote">Up Vote</string>
    <string name="feedback">FeedBack</string>
    <string name="tell_me_about_it">Tell me about it!</string>
    <string name="you_have_to_pay_500_inr_for_house_tax">you have to pay\n500 INR\nfor House Tax.</string>
    <string name="pay_tax">Pay Tax</string>
</resources>
