<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_cancel"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuFeedBack"
        android:icon="@drawable/ic_cancel"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuPayTax"
        android:icon="@drawable/ic_cancel"
        android:title="@string/pay_tax"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuLogOut"
        android:icon="@drawable/ic_cancel"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
