<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/dp18"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_gradient"
            android:orientation="vertical"
            android:padding="@dimen/dp8">

            <TextView
                style="@style/normalTextView"
                android:layout_marginTop="@dimen/dp8"
                android:gravity="center"
                android:text="@string/good_news"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp18"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtLabelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp8"
                    android:text="@string/a_bigger_at_pit_ring_road"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtLabelStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp8"
                    android:text="@string/resolved"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>