<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="?actionBarSize"
        android:text="@string/ethan_hunt"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_background">


            <LinearLayout
                android:id="@+id/layoutPostContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="?actionBarSize"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNoOfPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_22"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/posts"
                    android:textColor="@color/colorDullBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSolvedContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutPostContainer"
                android:layout_margin="?actionBarSize"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSolvedIssues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_22"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/solved"
                    android:textColor="@color/colorDullBlack" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutUpVoteContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="?actionBarSize"
                android:layout_toEndOf="@+id/layoutPostContainer"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNoOfUpVotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_22"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/up_votes"
                    android:textColor="@color/colorDullBlack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutPostContainer"
                android:layout_margin="?actionBarSize"
                android:layout_toRightOf="@+id/layoutSolvedContainer"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUnsolved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_22"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/unsolved"
                    android:textColor="@color/colorDullBlack" />
            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>