<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bottom_navigation"
    tools:context="com.ec.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgCloseButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_cancel"
        android:tint="@color/colorWhite" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_above="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/question_guy" />


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dp25"
        android:layout_marginLeft="?actionBarSize"
        android:layout_marginRight="?actionBarSize"
        android:drawablePadding="@dimen/dp4"
        android:drawableStart="@drawable/ic_email_green_24dp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/dp2"
        android:paddingBottom="4dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/normalButton"
        android:layout_below="@+id/edtEmail"
        android:layout_marginBottom="@dimen/dp16"
        android:layout_marginLeft="?actionBarSize"
        android:layout_marginRight="?actionBarSize"
        android:background="@color/colorAccent"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtForgotPwd"
        style="@style/normalTextView"
        android:layout_width="wrap_content"
        android:layout_below="@id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <TextView
        style="@style/normalTextView"
        android:layout_width="wrap_content"
        android:layout_below="@id/txtForgotPwd"
        android:layout_centerHorizontal="true"
        android:text="Enter your email above to receive your password. "
        android:textColor="@color/colorDullWhite" />


</RelativeLayout>
