<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ec.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLoginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?actionBarSize"
                android:layout_marginTop="100dp"
                android:text="Log In"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_35"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="?actionBarSize"
                android:layout_marginRight="?actionBarSize"
                android:layout_marginTop="?actionBarSize"
                android:drawableStart="@drawable/ic_contact_book"
                android:hint="Mobile"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="?actionBarSize"
                android:layout_marginRight="?actionBarSize"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1" />


            <Button
                android:id="@+id/btnLogin"
                style="@style/normalButton"
                android:layout_marginEnd="?actionBarSize"
                android:layout_marginStart="?actionBarSize"
                android:layout_marginTop="40dp"
                android:text="@string/log_in" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="?actionBarSize"
                android:layout_marginStart="?actionBarSize"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSinUpLabel"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black_overlay"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
